# quantlab

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: crypto_risk.yaml  crypto_universe.yaml  risk.yaml  settings.yaml  universe.yaml
docs/: decisions.md  live_readiness_template.md
src/quantlab/: __init__.py  cli.py  config.py  constants.py  logging_setup.py  version.py
src/quantlab/backtest/: __init__.py  engine.py  metrics.py  panel.py  signals.py  strategy.py
src/quantlab/broker/: __init__.py  alpaca_trading.py  assets.py
src/quantlab/data/: __init__.py  alpaca_client.py  calendar.py  coinbase_client.py  health.py  reconcile.py  store.py  tiingo_client.py  validate.py
src/quantlab/paper/: __init__.py  rebalance.py  runner.py
tests/: conftest.py  oracle.py  test_alerts.py  test_alpaca_client.py  test_calendar.py  test_coinbase_client.py  test_config.py  test_crypto_backtest_cli.py  test_crypto_broker.py  test_crypto_calendar.py  test_crypto_paper.py  test_crypto_schedule.py  test_crypto_strategies.py  test_digest.py  test_engine_oracle.py  test_health.py  test_late_run_guard.py  test_live.py  test_logging.py  test_metrics.py  test_metrics_annualization.py  test_multi_account.py  test_panel.py  test_paper_runner.py  test_rebalance.py  test_reconcile.py  test_risk.py  test_scheduler.py  test_shadow.py  test_store.py  test_store_sanitize.py  test_strategies.py  test_tiingo_client.py  test_trading_client.py  test_validate.py  test_validation.py  test_validation_annualization.py  test_weekly.py
(+21 files in other folders)
