[project]
name = "quantlab"
version = "0.1.0"
description = "Algorithmic trading research system (research/paper-trading only)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "requests>=2.32",
    "exchange-calendars>=4.5",
    "tenacity>=8.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
quantlab = "quantlab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantlab"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=quantlab --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: hits the real Tiingo API; requires TIINGO_API_KEY, skipped otherwise",
]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
